{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "184c3f61-b59d-4c5b-8364-378b4b6df672",
            "actions": [
                {
                    "name": "SpeedIncrease",
                    "type": "Value",
                    "id": "fb2baa5f-f6f1-4faf-9053-ae3e503b9cb4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PoleGrabRight",
                    "type": "Value",
                    "id": "16a1bdeb-e24c-4c37-aee9-bcc1699ab575",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PoleGrabLeft",
                    "type": "Value",
                    "id": "c0955d46-6ad3-4ae5-97a8-2bc73457f187",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "5835b9db-b4f9-4570-b3b7-b96975d1c5dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CannonAim",
                    "type": "Value",
                    "id": "09a31375-3962-4559-953c-7dde326c1c32",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CannonShoot",
                    "type": "Value",
                    "id": "1263d790-2233-42f2-bb20-e7d998b43cea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CannonPower",
                    "type": "Value",
                    "id": "ee44a1ad-fa2b-4ed9-8695-04e0af58e9c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BumpLeft",
                    "type": "Value",
                    "id": "57c8de5a-bd0f-4dc9-9cea-29bc8a9d1800",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BumpRight",
                    "type": "Value",
                    "id": "61bd7637-d02b-4a66-97aa-f80b6d6321ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookBack",
                    "type": "Value",
                    "id": "eab60049-1cee-42f7-97be-b6cf865b80c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GetReady",
                    "type": "Value",
                    "id": "c231824e-f9a4-4f6c-8ed0-520490189d91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10a85b3c-efee-42a9-8b3a-617965a3cc26",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedIncrease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "500ea93f-44a0-4d26-ad15-5a214192f5bb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedIncrease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae16b3e7-983b-41dd-9f6a-21d32c9ba8c5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleGrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4fda088-7cd6-4aef-b00b-0bbfd297a13b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleGrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcc6541c-7fc2-41d2-b431-7b74c0a67c05",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector Keyboard",
                    "id": "71986bb2-ee51-4c12-903f-cc20ceffa123",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "71559ee8-77d2-4667-b630-8e4452c8d7c7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "577b6aea-42c5-4d9e-a7c8-d73b71e776dd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "eaba3971-d35e-49ec-a4bf-b8e527a878b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b6ab22e6-376e-4f19-91cd-f1917b0b7a2d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "34c72032-4d8c-44ab-a779-5d6f1940eb64",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "389db2ce-3add-4bb7-853b-85b2398c70b0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "88fa06cf-0482-4d81-b32b-780db0a02c98",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4cec3e37-c994-4028-92dd-6fb7b4b62436",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8e79dc95-d198-4a51-ada9-0d31951838e9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "66662dc1-54ca-4acc-b821-c98ade53403b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "877f40a1-b820-452c-9a6b-fca8e36b7257",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleGrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c0afbf7-6b2f-4345-a1f0-67d6a4b49845",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleGrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc543ae3-ea57-4df6-8b6d-a1371bc0aea2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c0f8295-b6ff-4744-a160-33a6989685d8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b075d68-4f3b-440f-b1e5-8e40deffb1f2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9acce4bc-dde1-4b99-8fdd-ffdec916ad09",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd797154-85ce-46d4-be87-070c34b4bfc6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ae1d33d-db6e-496a-b76c-d25d65a128d0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "907964d4-86c8-4066-8b4e-67951a5638e5",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9157ae6c-5d6c-46b8-9aaa-b9a583811700",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c109d28f-5eeb-42e0-a27f-14beca850cde",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32fc062c-72cc-4e2e-9d20-8171cfea73be",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96be68a1-52f1-4b37-b660-d0a960edcbd3",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetReady",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "297f6dc4-fd98-4c93-9443-c5eae7746f52",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetReady",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25a27ef2-c7bb-48cb-be86-1c5af85fb91b",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetReady",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}